src/Backend/parser_Interprete/ParserParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Parser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


    namespace OLC2_Proyecto2_201612218.src.Backend.parser_Interprete;
    using OLC2_Proyecto2_201612218.src.Backend.Interprete.Utils;
    using OLC2_Proyecto2_201612218.src.Backend.Interprete.Abstracts;
    using OLC2_Proyecto2_201612218.src.Backend.Interprete.Expresiones;
    using OLC2_Proyecto2_201612218.src.Backend.Interprete.Instrucciones;
    using MiSwitch = OLC2_Proyecto2_201612218.src.Backend.Interprete.Instrucciones.Switch;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ParserParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, KW_int=30, KW_float=31, 
		KW_string=32, KW_bool=33, KW_rune=34, KW_println=35, KW_main=36, KW_func=37, 
		KW_true=38, KW_false=39, KW_nil=40, KW_break=41, KW_continue=42, KW_return=43, 
		KW_var=44, KW_if=45, KW_for=46, KW_switch=47, KW_else=48, KW_range=49, 
		KW_case=50, KW_default=51, KW_atoi=52, KW_parsefloat=53, KW_typeof=54, 
		KW_index=55, KW_join=56, KW_len=57, KW_append=58, TK_rune=59, Tk_string=60, 
		Tk_int=61, Tk_float=62, Tk_id=63, IGNORE=64, SALTO=65, COMENTARIOS=66;
	public const int
		RULE_inicio = 0, RULE_instruccionglobal = 1, RULE_funcionMain = 2, RULE_funcion = 3, 
		RULE_parametros = 4, RULE_bloque = 5, RULE_instruccion = 6, RULE_declaracion = 7, 
		RULE_reasignacion = 8, RULE_estructuraIf = 9, RULE_estructuraFor = 10, 
		RULE_estructuraSwitch = 11, RULE_casos = 12, RULE_println = 13, RULE_tipoDato = 14, 
		RULE_tipo = 15, RULE_exp = 16, RULE_slice = 17, RULE_llamadafunc = 18;
	public static readonly string[] ruleNames = {
		"inicio", "instruccionglobal", "funcionMain", "funcion", "parametros", 
		"bloque", "instruccion", "declaracion", "reasignacion", "estructuraIf", 
		"estructuraFor", "estructuraSwitch", "casos", "println", "tipoDato", "tipo", 
		"exp", "slice", "llamadafunc"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "','", "'{'", "'}'", "';'", "'='", "':='", "'+='", 
		"'-='", "'++'", "'--'", "'['", "']'", "':'", "'-'", "'*'", "'/'", "'%'", 
		"'+'", "'<='", "'>='", "'<'", "'>'", "'=='", "'!='", "'!'", "'&&'", "'||'", 
		"'int'", "'float64'", "'string'", "'bool'", "'rune'", "'fmt.Println'", 
		"'main'", "'func'", "'true'", "'false'", "'nil'", "'break'", "'continue'", 
		"'return'", "'var'", "'if'", "'for'", "'switch'", "'else'", "'range'", 
		"'case'", "'default'", "'strconv.Atoi'", "'strconv.ParseFloat'", "'reflect.TypeOf'", 
		"'slices.Index'", "'strings.Join'", "'len'", "'append'", null, null, null, 
		null, null, null, "'\\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "KW_int", "KW_float", "KW_string", 
		"KW_bool", "KW_rune", "KW_println", "KW_main", "KW_func", "KW_true", "KW_false", 
		"KW_nil", "KW_break", "KW_continue", "KW_return", "KW_var", "KW_if", "KW_for", 
		"KW_switch", "KW_else", "KW_range", "KW_case", "KW_default", "KW_atoi", 
		"KW_parsefloat", "KW_typeof", "KW_index", "KW_join", "KW_len", "KW_append", 
		"TK_rune", "Tk_string", "Tk_int", "Tk_float", "Tk_id", "IGNORE", "SALTO", 
		"COMENTARIOS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Parser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ParserParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ParserParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ParserParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InicioContext : ParserRuleContext {
		public List < Instruccion > resultado;
		public List < Instruccion > L = new();
		public InstruccionglobalContext ins;
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionglobalContext[] instruccionglobal() {
			return GetRuleContexts<InstruccionglobalContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionglobalContext instruccionglobal(int i) {
			return GetRuleContext<InstruccionglobalContext>(i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(Context, State);
		EnterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KW_func) {
				{
				{
				State = 38;
				_localctx.ins = instruccionglobal();
				_localctx.L.Add (_localctx.ins.resultado);
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			_localctx.resultado = _localctx.L;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionglobalContext : ParserRuleContext {
		public Instruccion resultado;
		public FuncionMainContext f1;
		public FuncionContext f2;
		[System.Diagnostics.DebuggerNonUserCode] public FuncionMainContext funcionMain() {
			return GetRuleContext<FuncionMainContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncionContext funcion() {
			return GetRuleContext<FuncionContext>(0);
		}
		public InstruccionglobalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccionglobal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.EnterInstruccionglobal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.ExitInstruccionglobal(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionglobalContext instruccionglobal() {
		InstruccionglobalContext _localctx = new InstruccionglobalContext(Context, State);
		EnterRule(_localctx, 2, RULE_instruccionglobal);
		try {
			State = 54;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				_localctx.f1 = funcionMain();
				_localctx.resultado =  _localctx.f1.resultado;
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51;
				_localctx.f2 = funcion();
				_localctx.resultado =  _localctx.f2.resultado;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncionMainContext : ParserRuleContext {
		public Instruccion resultado;
		public IToken f;
		public BloqueContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_main() { return GetToken(ParserParser.KW_main, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_func() { return GetToken(ParserParser.KW_func, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque() {
			return GetRuleContext<BloqueContext>(0);
		}
		public FuncionMainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcionMain; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.EnterFuncionMain(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.ExitFuncionMain(this);
		}
	}

	[RuleVersion(0)]
	public FuncionMainContext funcionMain() {
		FuncionMainContext _localctx = new FuncionMainContext(Context, State);
		EnterRule(_localctx, 4, RULE_funcionMain);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			_localctx.f = Match(KW_func);
			State = 57;
			Match(KW_main);
			State = 58;
			Match(T__0);
			State = 59;
			Match(T__1);
			State = 60;
			_localctx.b = bloque();

			        _localctx.resultado =  new Funcion ((_localctx.f!=null?_localctx.f.Line:0), (_localctx.f!=null?_localctx.f.Column:0), "main", new List  < Parametro >(), _localctx.b.resultado, new Tipodato (Tipo.NIL));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncionContext : ParserRuleContext {
		public Instruccion resultado;
		public Tipodato t = new Tipodato(Tipo.NIL);
		public IToken f;
		public IToken id;
		public ParametrosContext p;
		public TipoDatoContext T1;
		public BloqueContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_func() { return GetToken(ParserParser.KW_func, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Tk_id() { return GetToken(ParserParser.Tk_id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext parametros() {
			return GetRuleContext<ParametrosContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque() {
			return GetRuleContext<BloqueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TipoDatoContext tipoDato() {
			return GetRuleContext<TipoDatoContext>(0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.EnterFuncion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.ExitFuncion(this);
		}
	}

	[RuleVersion(0)]
	public FuncionContext funcion() {
		FuncionContext _localctx = new FuncionContext(Context, State);
		EnterRule(_localctx, 6, RULE_funcion);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			_localctx.f = Match(KW_func);
			State = 64;
			_localctx.id = Match(Tk_id);
			State = 65;
			Match(T__0);
			State = 66;
			_localctx.p = parametros();
			State = 67;
			Match(T__1);
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33286004736L) != 0)) {
				{
				State = 68;
				_localctx.T1 = tipoDato();
				_localctx.t =  _localctx.T1.resultado;
				}
			}

			State = 73;
			_localctx.b = bloque();

			        _localctx.resultado =  new Funcion ((_localctx.f!=null?_localctx.f.Line:0), (_localctx.f!=null?_localctx.f.Column:0), (_localctx.id!=null?_localctx.id.Text:null), _localctx.p.resultado, _localctx.b.resultado, _localctx.t);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametrosContext : ParserRuleContext {
		public List < Parametro > resultado;
		public List < Parametro > @params = new();
		public IToken id;
		public TipoDatoContext t;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Tk_id() { return GetTokens(ParserParser.Tk_id); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Tk_id(int i) {
			return GetToken(ParserParser.Tk_id, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TipoDatoContext[] tipoDato() {
			return GetRuleContexts<TipoDatoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TipoDatoContext tipoDato(int i) {
			return GetRuleContext<TipoDatoContext>(i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametros; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.EnterParametros(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IParserListener typedListener = listener as IParserListener;
			if (typedListener != null) typedListener.ExitParametros(this);
		}
	}

	[RuleVersion(0)]
	public ParametrosContext parametros() {
		ParametrosContext _localctx = new ParametrosContext(Context, State);
		EnterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Tk_id) {
				{
				State = 76;
				_localctx.id = Match(Tk_id);
				State = 77;
				_localctx.t = tipoDato();
				_localctx.@params.Add(new Parametro((_localctx.id!=null?_localctx.id.Line:0) , (_localctx.id!=null?_localctx.id.Column:0), (_localctx.id!=null?_localctx.id.Text:null), _localctx.t.resultado));
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 79;
					Match(T__2);
					State = 80;
					_localctx.id = Match(Tk_id);
					State = 81;
					_localctx.t = tipoDato();
					_localctx.@params.Add(new Parametro((_localctx.id!=null?_localctx.id.Line:0) , (_localctx.id!=null?_localctx.id.Column:0), (_localctx.id!=null?_localctx.id.Text:null), _localctx.t.resultado));
					}
					}
					State = 88;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}


			                _localctx.resultado =  _localctx.@params;
			                
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
